<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAE4E4"
    tools:context=".Vue.ACTION">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fdecran"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center"
                android:text="@string/question"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="25dp"
                android:elevation="40sp"
                android:stateListAnimator="@null"
                android:text="@string/reponse1"
                android:textStyle="bold|italic"
                app:backgroundTint="@color/cardview_dark_background" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="25dp"
                android:elevation="40sp"
                android:stateListAnimator="@null"
                android:text="@string/reponse2"
                android:textStyle="bold|italic"
                app:backgroundTint="@color/cardview_dark_background" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="25dp"
                android:elevation="40sp"
                android:stateListAnimator="@null"
                android:text="@string/reponse3"
                android:textStyle="bold|italic"
                app:backgroundTint="@color/cardview_dark_background" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="25dp"
                android:elevation="40sp"
                android:stateListAnimator="@null"
                android:text="@string/reponse4"
                android:textStyle="bold|italic"
                app:backgroundTint="@color/cardview_dark_background" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="25dp"
                android:elevation="40sp"
                android:stateListAnimator="@null"
                android:text="@string/reponse5"
                android:textStyle="bold|italic"
                app:backgroundTint="@color/cardview_dark_background" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>