<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vue.XML">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fdecran"

        android:orientation="vertical"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="85dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:background="@drawable/arrondi_bouton"

                android:gravity="center|center_vertical"
                android:stateListAnimator="@null"
                android:text="@string/ecm_fant_me_xml"
                android:textColor="@color/cardview_dark_background"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <Button

                android:id="@+id/xmltc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="50dp"
                android:background="@drawable/arrondi_bouton"
                android:elevation="50px"
                android:stateListAnimator="@null"
                android:text="@string/test_de_connaissance_n_1"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:backgroundTint="@color/cardview_dark_background" />

            <Button
                android:id="@+id/xmltc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="25sp"
                android:elevation="50dp"
                android:stateListAnimator="@null"
                android:text="@string/test_de_connaissance_n_2"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:backgroundTint="@color/cardview_dark_background" />

            <Button
                android:id="@+id/xmltc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25sp"
                android:background="@drawable/arrondi_bouton"
                android:elevation="50dp"
                android:stateListAnimator="@null"
                android:text="@string/test_de_connaissance_n_3"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:backgroundTint="@color/cardview_dark_background" />

            <ProgressBar
                android:id="@+id/xmlprogressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="60sp" />

            <TextView
                android:id="@+id/xmlecm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/ecm"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/xmlretour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/retour"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    app:backgroundTint="@color/cardview_dark_background" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/xmlmenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:text="@string/menu"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    app:backgroundTint="@color/cardview_dark_background" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>