<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vue.Mescours">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fdecran"

        android:orientation="vertical"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="85dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:background="@drawable/arrondi_bouton"

                android:gravity="center|center_vertical"
                android:stateListAnimator="@null"
                android:text="ECM-FANTÔME / COURS"
                android:textColor="@color/cardview_dark_background"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/liencours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="75dp"
                android:text="@string/cliquer_ici_pour_voir_les_cours"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="50dp"
                android:text="@string/service_central_d_authentification"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/portail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="50sp"
                android:text="@string/uvs_portail"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/courretour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/retour"
                    android:elevation="50dp"
                    android:onClick="retour"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    app:backgroundTint="@color/cardview_dark_background" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"/>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>